src/objects/JBCXM__Report__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>Entity Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MetaData__c</fullName>
        <label>MetaData</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__OverallDisplayOrder__c</fullName>
        <label>Overall Display Order</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Reports (Relationship Type)</relationshipLabel>
        <relationshipName>RelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportParams__c</fullName>
        <label>ReportParams</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Template__c</fullName>
        <label>Template</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Report</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>